src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}
#cursor {
    background-color: white;
    display: inline-block;
    color: white;
    width: 1px;
    animation: blinkingCursor 0.8s infinite;
}

@keyframes blinkingCursor {
    50%{color: white; background-color: white}
    100% {color: transparent; background-color: transparent;}
}

